[final-project] update docs and some other things
