# final-project/docs/swagger.json
@@ -6,6 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
+    "basePath": "/api/v1",
     "paths": {
         "/comments": {
             "get": {
@@ -26,6 +27,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-array_dto_CommentResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
                         }
                     },
                     "500": {
@@ -76,6 +83,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -117,6 +130,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-any"
                         }
@@ -182,6 +201,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -231,6 +256,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -268,6 +299,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-array_dto_PhotoResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
                         }
                     },
                     "500": {
@@ -314,6 +351,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-any"
                         }
@@ -485,6 +528,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -519,6 +568,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-array_dto_SocialMediaResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
                         }
                     },
                     "500": {
@@ -569,6 +624,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -610,6 +671,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-any"
                         }
@@ -675,6 +742,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
@@ -720,6 +793,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-any"
                         }
@@ -780,6 +859,18 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -808,8 +899,8 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-any"
                         }
@@ -859,6 +950,12 @@
                             "$ref": "#/definitions/helper.Response-any"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -900,6 +997,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/helper.Response-any"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
                         "schema": {
                             "$ref": "#/definitions/helper.Response-any"
                         }
@@ -1663,7 +1766,7 @@
     },
     "securityDefinitions": {
         "BearerToken": {
-            "description": "Bearer token for authentication. Example: Bearer {token}",
+            "description": "Bearer token for authentication. Format: Bearer {token}",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
